Добавил описания для оставшихся api методов для Post.
